fix(cards-block): normalize card height to stretch next to siblings

--- a/templates/consonant/blocks/cards/cards.css
+++ b/templates/consonant/blocks/cards/cards.css
@@ -174,7 +174,11 @@ main .cards.overlay .card-text a {
     min-height: unset;
 }
 
-main .cards.horizontal .card,
+main .cards.horizontal .card {
+    display: flex;
+    width: 100%;
+}
+
 main .cards.horizontal .card-container-link {
     display: flex;
     width: 100%;
